# simulating-computer-systems

./: .gitignore  Justfile  README.md  flake.nix  pyproject.toml
docs/latex/: .gitignore  README.md  main.tex  preamble.tex
docs/latex/chapters/: 00_authorized_page.tex  00_digitized_page.tex  00_frontmatter.tex  00_half_title_page.tex  00_logo_page.tex  00_preface.tex  00_scan_prelim.tex  01_chapter1.tex  01_placeholder.tex  02_chapter2.tex  03_chapter3.tex  04_chapter4.tex  05_chapter5.tex  06_chapter6.tex  07_chapter7.tex  08_chapter8.tex  09_chapter9.tex  10_appendix.tex  11_references.tex  12_indexes.tex
src/scs/: main.py  sim1.py  sim10.py  sim11.py  sim12.py  sim2.py  sim2viz.py  sim3.py  sim4.py  sim5.py  sim6.py  sim7.py  sim8.py  sim9.py
src/scs/smpl/: __init__.py  rand.py  smpl.py  stat.py
tests/scs/: test_main.py
